# graphics_learning

./: .gitignore  CMakeLists.txt  flake.nix  shaders.json
headers/: optional.h  shader_info.h  shaders_metadata.h
src/: main.c  shader_info.c  shaders_metadata.c
styles/: style.css
ui/: interface.xml
